syntax = "proto3";
package spire.common.plugin;
option go_package = "sriplugin";

/** Represents the plugin-specific configuration string. */
message ConfigureRequest {
    /** The configuration for the plugin. */
    string configuration = 1;
}

/** Represents a list of configuration problems
found in the configuration string. */
message ConfigureResponse {
    /** A list of errors */
    repeated string errorList = 1;
}

/** Represents an empty request. */
message GetPluginInfoRequest {}

/** Represents the plugin metadata. */
message GetPluginInfoResponse {
    string name = 1;
    string category = 2;
    string type = 3;
    string description = 4;
    string dateCreated = 5;
    string location = 6;
    string version = 7;
    string author = 8;
    string company = 9;
}

message PluginInfoRequest {}

message PluginInfoReply {
    repeated GetPluginInfoResponse pluginInfo = 1;
}

message StopRequest {}

message StopReply {}

service Server {
    rpc Stop(StopRequest) returns (StopReply);
    rpc PluginInfo(PluginInfoRequest) returns (PluginInfoReply);
}
